package com.mycompany.gestionturnoshospital;

public enum Bloque {
    MANANA, TARDE, NOCHE
}
